--- a/styles.css
+++ b/styles.css
@@ -10947,7 +10947,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #af893f;
-  background-image: url("../assets/sanitaryware_banner.jpg");
+  background-image: url("./assets/sanitaryware_banner.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
